// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CircleProgress CircleProgress gapPosition equal to left renders correctly 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "panda-progress-circle ",
      "viewBox": "0 0 100 100",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "panda-progress-circle-trail",
          "d": "M 50,50 m -49.5,0
     a 49.5,49.5 0 1 1 99,0
     a 49.5,49.5 0 1 1 -99,0",
          "fill-opacity": "0",
          "stroke": "#D9D9D9",
          "stroke-width": "1",
          "style": "stroke-dasharray:311.01767270538954px 311.01767270538954px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s",
        },
        "children": Array [],
        "name": "path",
        "namespace": "http://www.w3.org/2000/svg",
        "next": Object {
          "attribs": Object {
            "class": "panda-progress-circle-path",
            "d": "M 50,50 m -49.5,0
     a 49.5,49.5 0 1 1 99,0
     a 49.5,49.5 0 1 1 -99,0",
            "fill-opacity": "0",
            "stroke": "#2db7f5",
            "stroke-linecap": "round",
            "stroke-width": "1",
            "style": "stroke-dasharray:37.322120724646744px 311.01767270538954px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s",
          },
          "children": Array [],
          "name": "path",
          "namespace": "http://www.w3.org/2000/svg",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "d": undefined,
            "fill-opacity": undefined,
            "stroke": undefined,
            "stroke-linecap": undefined,
            "stroke-width": undefined,
            "style": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "d": undefined,
            "fill-opacity": undefined,
            "stroke": undefined,
            "stroke-linecap": undefined,
            "stroke-width": undefined,
            "style": undefined,
          },
        },
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "d": undefined,
          "fill-opacity": undefined,
          "stroke": undefined,
          "stroke-width": undefined,
          "style": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "d": undefined,
          "fill-opacity": undefined,
          "stroke": undefined,
          "stroke-width": undefined,
          "style": undefined,
        },
      },
      Object {
        "attribs": Object {
          "class": "panda-progress-circle-path",
          "d": "M 50,50 m -49.5,0
     a 49.5,49.5 0 1 1 99,0
     a 49.5,49.5 0 1 1 -99,0",
          "fill-opacity": "0",
          "stroke": "#2db7f5",
          "stroke-linecap": "round",
          "stroke-width": "1",
          "style": "stroke-dasharray:37.322120724646744px 311.01767270538954px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s",
        },
        "children": Array [],
        "name": "path",
        "namespace": "http://www.w3.org/2000/svg",
        "next": null,
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "panda-progress-circle-trail",
            "d": "M 50,50 m -49.5,0
     a 49.5,49.5 0 1 1 99,0
     a 49.5,49.5 0 1 1 -99,0",
            "fill-opacity": "0",
            "stroke": "#D9D9D9",
            "stroke-width": "1",
            "style": "stroke-dasharray:311.01767270538954px 311.01767270538954px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s",
          },
          "children": Array [],
          "name": "path",
          "namespace": "http://www.w3.org/2000/svg",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "d": undefined,
            "fill-opacity": undefined,
            "stroke": undefined,
            "stroke-width": undefined,
            "style": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "d": undefined,
            "fill-opacity": undefined,
            "stroke": undefined,
            "stroke-width": undefined,
            "style": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "d": undefined,
          "fill-opacity": undefined,
          "stroke": undefined,
          "stroke-linecap": undefined,
          "stroke-width": undefined,
          "style": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "d": undefined,
          "fill-opacity": undefined,
          "stroke": undefined,
          "stroke-linecap": undefined,
          "stroke-width": undefined,
          "style": undefined,
        },
      },
    ],
    "name": "svg",
    "namespace": "http://www.w3.org/2000/svg",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
      "viewBox": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
      "viewBox": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`CircleProgress CircleProgress gapPosition equal to right renders correctly 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "class": "panda-progress-circle ",
      "viewBox": "0 0 100 100",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "class": "panda-progress-circle-trail",
          "d": "M 50,50 m 49.5,0
     a 49.5,49.5 0 1 1 -99,0
     a 49.5,49.5 0 1 1 99,0",
          "fill-opacity": "0",
          "stroke": "#D9D9D9",
          "stroke-width": "1",
          "style": "stroke-dasharray:311.01767270538954px 311.01767270538954px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s",
        },
        "children": Array [],
        "name": "path",
        "namespace": "http://www.w3.org/2000/svg",
        "next": Object {
          "attribs": Object {
            "class": "panda-progress-circle-path",
            "d": "M 50,50 m 49.5,0
     a 49.5,49.5 0 1 1 -99,0
     a 49.5,49.5 0 1 1 99,0",
            "fill-opacity": "0",
            "stroke": "#2db7f5",
            "stroke-linecap": "round",
            "stroke-width": "0",
            "style": "stroke-dasharray:0px 311.01767270538954px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s",
          },
          "children": Array [],
          "name": "path",
          "namespace": "http://www.w3.org/2000/svg",
          "next": null,
          "parent": [Circular],
          "prev": [Circular],
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "d": undefined,
            "fill-opacity": undefined,
            "stroke": undefined,
            "stroke-linecap": undefined,
            "stroke-width": undefined,
            "style": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "d": undefined,
            "fill-opacity": undefined,
            "stroke": undefined,
            "stroke-linecap": undefined,
            "stroke-width": undefined,
            "style": undefined,
          },
        },
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "d": undefined,
          "fill-opacity": undefined,
          "stroke": undefined,
          "stroke-width": undefined,
          "style": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "d": undefined,
          "fill-opacity": undefined,
          "stroke": undefined,
          "stroke-width": undefined,
          "style": undefined,
        },
      },
      Object {
        "attribs": Object {
          "class": "panda-progress-circle-path",
          "d": "M 50,50 m 49.5,0
     a 49.5,49.5 0 1 1 -99,0
     a 49.5,49.5 0 1 1 99,0",
          "fill-opacity": "0",
          "stroke": "#2db7f5",
          "stroke-linecap": "round",
          "stroke-width": "0",
          "style": "stroke-dasharray:0px 311.01767270538954px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s",
        },
        "children": Array [],
        "name": "path",
        "namespace": "http://www.w3.org/2000/svg",
        "next": null,
        "parent": [Circular],
        "prev": Object {
          "attribs": Object {
            "class": "panda-progress-circle-trail",
            "d": "M 50,50 m 49.5,0
     a 49.5,49.5 0 1 1 -99,0
     a 49.5,49.5 0 1 1 99,0",
            "fill-opacity": "0",
            "stroke": "#D9D9D9",
            "stroke-width": "1",
            "style": "stroke-dasharray:311.01767270538954px 311.01767270538954px;stroke-dashoffset:-0px;transition:stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s",
          },
          "children": Array [],
          "name": "path",
          "namespace": "http://www.w3.org/2000/svg",
          "next": [Circular],
          "parent": [Circular],
          "prev": null,
          "type": "tag",
          "x-attribsNamespace": Object {
            "class": undefined,
            "d": undefined,
            "fill-opacity": undefined,
            "stroke": undefined,
            "stroke-width": undefined,
            "style": undefined,
          },
          "x-attribsPrefix": Object {
            "class": undefined,
            "d": undefined,
            "fill-opacity": undefined,
            "stroke": undefined,
            "stroke-width": undefined,
            "style": undefined,
          },
        },
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
          "d": undefined,
          "fill-opacity": undefined,
          "stroke": undefined,
          "stroke-linecap": undefined,
          "stroke-width": undefined,
          "style": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
          "d": undefined,
          "fill-opacity": undefined,
          "stroke": undefined,
          "stroke-linecap": undefined,
          "stroke-width": undefined,
          "style": undefined,
        },
      },
    ],
    "name": "svg",
    "namespace": "http://www.w3.org/2000/svg",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
      "viewBox": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
      "viewBox": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;
